force-app/main/default/objects/Candidate_Coding_Answer__c/Candidate_Coding_Answer__c.object-meta.xml
<CustomObject>
    <label>Candidate - Coding Answer</label>
    <nameField>
        <displayFormat>CA - {00000}</displayFormat>
        <label>Candidate - Coding Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate - Coding Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>