force-app/main/default/objects/Candidate_Coding_Answer__c/fields/Coding_Round_2_Question__c.field-meta.xml
<CustomField>
    <fullName>Coding_Round_2_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coding Round (2) Question</label>
    <referenceTo>Coding_Round_2_Question__c</referenceTo>
    <relationshipLabel>Candidate - Coding Answers</relationshipLabel>
    <relationshipName>Candidate_Coding_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>