force-app/main/default/objects/Candidate_Coding_Answer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Attempted</fullName>
                <default>true</default>
                <label>Not Attempted</label>
            </value>
            <value>
                <fullName>Just Attempted</fullName>
            </value>
            <value>
                <fullName>Partially Done</fullName>
            </value>
            <value>
                <fullName>Fully Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>