force-app/main/default/objects/Candidate_Coding_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Coding_Round_2_Question__c</columns>
    <columns>CandidateId__c</columns>
    <columns>Response__c</columns>
    <columns>Comments__c</columns>
    <columns>Status__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>